--- a/sass/site/compatibility/woocommerce/woocommerce.scss
+++ b/sass/site/compatibility/woocommerce/woocommerce.scss
@@ -1857,6 +1857,7 @@ p.demo_store,
 			border-bottom: 1px dotted var(--ast-border-color);
 			margin: 0;
 			line-height: 1.5;
+			text-align: left;
 		}
 
 		td {
